2010-05-13  Jeffrey Stedfast  <fejj@novell.com>

	* deployment.cpp (find_string): Removed.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* provider.cpp (StylePropertyValueProvider): clone the Value
	instances we put in our hash table so that we can control their
	lifetime and not access freed instances someone else owns and have
	already deleted.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (start_element): we need to set IsCDataVerbatim == true
	for OutOfBrowserSettings.Blurb in order for drt 8001 to pass.

	* runtime.h (Surface::GetSourceLocation): we need a
	cbinding/pinvoke for this.

2010-05-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/window-gtk.cpp: MoonWindowGtk::[de]install_application:
	set current deployment.

2010-05-11  Chris Toshok  <toshok@ximian.com>

	* pal/messaging/glib/pal-glib-msg.cpp (StateMachine::do_read): add
	a bit more info to the error message.
	(StateMachine::do_write): same.
	(MoonMessageListener::machine_finished_callback): stop using a
	"receiver_machine" instance variable.  it'll always point to the
	most recently created one.  we know which machine finished, it's
	the "data" parameter.
	(MoonMessageListener::machine_error_callback): same here.
	(SenderMachine::on_finished): pass NULL for the error.
	(MoonMessageSender::MachineError): call the messageSentCallback
	with a MoonError.

	* messaging.cpp,h (LocalMessageReceiver::LocalMessageReceiver):
	get the domain from the deployment's xap location.
	(LocalMessageReceiver::MessageReceived): it appears that if
	there's no response supplied, we use the receiverName as the
	response string.
	(LocalMessageSender::LocalMessageSender): get the sender domain
	from the xap location.
	(MessageSentHandler, MessageSent): add a MoonError parameter.
	Also only emit the event if there are handlers.

	* eventargs.h,cpp: add a MoonError argument to the ctor, and a
	GetErorr method that will throw the exception in managed.
